base structure down

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -106,6 +106,20 @@ h6 {
   padding: 0;
 }
 
+.masthead .social-link {
+  display: block;
+  height: 2rem;
+  width: 2rem;
+  line-height: 4.3rem;
+  font-size: 3rem;
+  background-color: #1D809F;
+  -webkit-transition: background-color 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out;
+  -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+
 @media (min-width: 992px) {
   .masthead {
     height: 100vh;
