--- a/public/scss/_masthead.scss
+++ b/public/scss/_masthead.scss
@@ -15,6 +15,20 @@
     margin: 0;
     padding: 0;
   }
+  .social-link{
+    display: block;
+    height: 4rem;
+    width: 4rem;
+    line-height: 4.3rem;
+    font-size: 3rem;
+    background-color: $primary;
+    transition: background-color 0.15s ease-in-out;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+    &:hover {
+      background-color: darken($primary, 10%);
+      text-decoration: none;
+    }
+  }
   @media (min-width: 992px) {
     height: 100vh;
     h1 {
@@ -22,3 +36,4 @@
     }
   }
 }
+
