--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -12,8 +12,8 @@ html {
 
 body {
   font-family: 'Silka-Regular', 'sans-serif';
-  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../img/landingpage/portfolio_bg.svg") !important;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/landingpage/portfolio_bg.svg") !important;
+  background-color: #ffffff;
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
 }
 
 .btn-xl {
@@ -23,6 +23,8 @@ body {
 .content-section {
   padding-top: 7.5rem;
   padding-bottom: 7.5rem;
+  margin: -5em 5em 0 5em;
+  position: relative;
 }
 
 .content-section-heading h2 {
@@ -73,6 +75,7 @@ h6 {
   color: white;
   background: rgba(52, 58, 64, 0.5);
   line-height: 45px;
+  z-index: 4;
 }
 
 .scroll-to-top:focus, .scroll-to-top:hover {
@@ -236,12 +239,12 @@ h6 {
   width: 60px;
   height: 60px;
   position: absolute;
-  bottom: 5px;
-  left: 3%;
+  bottom: 3.5rem;
+  left: 5%;
   transform: translate(-50%, 0);
   z-index: 3;
   text-align: center;
-    color: #6e0c24; !important;
+  color: #6e0c24; !important;
 }
 
 .scroll-down:active, .scroll-down:hover, .scroll-down:focus{
@@ -338,8 +341,8 @@ h6 {
 }
 
 footer.footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 
 footer.footer .social-link {
@@ -359,6 +362,66 @@ footer.footer .social-link:hover {
   background-color: #155d74;
   text-decoration: none;
 }
+
+.footer-basic {
+  padding:0 0 40px 0;
+  color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:18px;
+  color:#aaa;
+  margin-bottom:0;
+}
+
 
 a {
   color: black;
@@ -448,5 +511,127 @@ a:hover, a:focus, a:active {
     top: 40%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+}
+
+.bqxGcr {
+    background-color: transparent !important;
+}
+
+.work-img{
+    padding: 0; !important;
+}
+
+.img-thumbnail{
+    border: 0; !important;
+}
+
+:root {
+  --jumbotron-padding-y: 3rem;
+}
+
+.jumbotron {
+  padding-top: var(--jumbotron-padding-y);
+  padding-bottom: var(--jumbotron-padding-y);
+  margin-bottom: 0;
+  background-color: #fff;
+}
+@media (min-width: 768px) {
+  .jumbotron {
+    padding-top: calc(var(--jumbotron-padding-y) * 2);
+    padding-bottom: calc(var(--jumbotron-padding-y) * 2);
+  }
+}
+
+.jumbotron p:last-child {
+  margin-bottom: 0;
+}
+
+.jumbotron-heading {
+  font-weight: 300;
+}
+
+.jumbotron .container {
+  max-width: 40rem;
+}
+
+.me-pic {
+
+}
+
+.header-filter:after, .header-filter:before {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: block;
+  left: 0;
+  top: 0;
+  content: "";
+}
+
+.header-filter::before {
+  background: rgba(0,0,0,.5);
+}
+
+.main-raised {
+  margin: -60px 30px 0;
+  border-radius: 6px;
+  box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+
+.main {
+  background-color: white;
+  position: relative;
+  z-index: 3;
+}
+
+.profile-page .profile {
+  text-align: center;
+}
+
+.profile-page .profile img {
+  max-width: 150%;
+  width: 100%;
+  margin: 5em auto -7em;
+  -webkit-transform: translate3d(0,-50%,0);
+  -moz-transform: translate3d(0,-50%,0);
+  -o-transform: translate3d(0,-50%,0);
+  -ms-transform: translate3d(0,-50%,0);
+  transform: translate3d(0,-50%,0);
+}
+
+.img-raised {
+  box-shadow: 0 5px 15px -8px rgba(0,0,0,.24), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+
+.rounded-circle {
+  border-radius: 50%!important;
+}
+
+.img-fluid, .img-thumbnail {
+  max-width: 100%;
+  height: auto;
+}
+
+.title {
+  min-height: 32px;
+  color: black;
+  font-weight: 700;
+  margin-top: 1rem;
+}
+
+.profile-page .description {
+  margin: 1.071rem auto 0;
+  max-width: 600px;
+  color: #999;
+  font-weight: 300;
+}
+
+.carousel-inner {
+  padding-bottom: 5em;
+}
+
+.bg-main {
+  background-image: url("../img/landingpage/portfolio_bg.svg") !important;
 }
 
