Added react bootstrap and finalized tech tab

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -424,11 +424,11 @@ footer.footer .social-link:hover {
 
 
 a {
-  color: black;
+  color: white;
 }
 
 a:hover, a:focus, a:active {
-  color: gray;
+  color: cornflowerblue;
 }
 
 
