--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,13 @@
   margin-right: auto;
 }
 
+.openspace-header-image{
+  max-width: 30%;
+  max-height: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
